# zarc

./: Cargo.toml  README.md  rustfmt.toml
src/: archive.rs  cli.yml  errors.rs  main.rs
